feat: Add CommonUtils with static methods for AES encryption and decryption.

--- a/env/.env.demo
+++ b/env/.env.demo
@@ -1,3 +1,4 @@
 BASE_URL=https://opensource-demo.orangehrmlive.com
-APP_USERNAME=Admin
-APP_PASSWORD=admin123
+ENCRYPTION_KEY=MySecureKey@2026!Playwright#Framework
+APP_USERNAME=U2FsdGVkX19dc3ahS7xGZ0Wx9lod7HKymSKPcoD9Xlg=
+APP_PASSWORD=U2FsdGVkX19NhYueyX0PcwOE7ShcYzXutEkx14Bz4PE=
